--- a/public/easy.ejs
+++ b/public/easy.ejs
@@ -33,7 +33,7 @@
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+                <a class="btn btn-outline-success" href="www.google.com" >Search</a>
             </form>
           </div>
         </div>
@@ -47,7 +47,7 @@
                   <div class="card-body">
                       <h5 class="card-title"><%= animal.title %></h5>
                       <p class="card-text"><%= animal.description %></p>
-                      <a href="animal.html" class="btn btn-primary">Button</a>
+                      <a href="/animal/<%= animal._id%>" class="btn btn-primary">Button</a>
                   </div>
               </div>
           </div>
